web/vpc/rt.tf
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  # route {
  #   cidr_block = "0.0.0.0/0"
  #   gateway_id = aws_internet_gateway.main.id
  # }
  tags = {
    Name = "public-route-table"
  }
}

resource "aws_route" "route_to_igw" {
  route_table_id         = aws_route_table.public.id
  gateway_id             = aws_internet_gateway.main.id
  destination_cidr_block = "0.0.0.0/0"
}

resource "aws_route_table_association" "main" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}
