web/vpc/sg.tf
#   ports: 22 (SSH), 80 (HTTP), 443 (HTTPS)
#   protocols: icmp, udp, tcp or -1 (all)

resource "aws_security_group" "sg_ec2" {
  # security group for EC2
  vpc_id = aws_vpc.main.id
  name   = "sg-ec2"
  tags = {
    Name = "sg-ec2"
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "sg_rds" {
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg_rds"
  }
}
